--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -6,48 +6,45 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox prefHeight="200.0"
-      xmlns="http://javafx.com/javafx/19"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="client.scenes.CardPopupCtrl">
-   <children>
-      <ScrollPane hbarPolicy="NEVER" hmax="0.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0">
-               <children>
-                  <VBox maxHeight="1.7976931348623157E308">
-                     <children>
-                        <TextField fx:id="cardTitle">
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                        </TextField>
-                        <TextArea id="CardDescription" fx:id="cardDescription" prefHeight="100.0" prefWidth="200.0">
-                           <VBox.margin>
-                              <Insets top="8.0" />
-                           </VBox.margin>
-                        </TextArea>
-                     </children>
-                     <padding>
-                        <Insets bottom="8.0" left="8.0" right="20.0" top="8.0" />
-                     </padding>
-                  </VBox>
-               </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0">
+<BorderPane maxHeight="1.7976931348623157E308"
+            xmlns="http://javafx.com/javafx/19"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="client.scenes.CardPopupCtrl">
+   <bottom>
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <buttons>
             <Button mnemonicParsing="false" onAction="#close" text="Cancel" />
           <Button mnemonicParsing="false" onAction="#save" text="Save" />
         </buttons>
-         <VBox.margin>
+         <BorderPane.margin>
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-         </VBox.margin>
+         </BorderPane.margin>
       </ButtonBar>
-   </children>
-</VBox>
+   </bottom>
+   <center>
+      <ScrollPane fitToHeight="true" hbarPolicy="NEVER" hmax="0.0" maxHeight="1.7976931348623157E308" BorderPane.alignment="CENTER">
+        <content>
+            <VBox maxHeight="1.7976931348623157E308">
+               <children>
+                  <TextField fx:id="cardTitle">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </TextField>
+                  <TextArea id="CardDescription" fx:id="cardDescription" prefHeight="100.0" prefWidth="200.0">
+                     <VBox.margin>
+                        <Insets top="8.0" />
+                     </VBox.margin>
+                  </TextArea>
+               </children>
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="20.0" top="8.0" />
+               </padding>
+            </VBox>
+        </content>
+      </ScrollPane>
+   </center>
+</BorderPane>
