--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
-   <children>
-      <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="394.0" prefWidth="593.0" vbarPolicy="NEVER" vmax="0.0">
-        <content>
-            <AnchorPane>
-               <children>
-                  <HBox fx:id="list_of_lists">
+<ScrollPane prefWidth="600"
+            prefHeight="400"
+            fitToHeight="true"
+            vbarPolicy="NEVER"
+            vmax="0.0"
+            xmlns="http://javafx.com/javafx/19"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="client.scenes.BoardOverviewCtrl">
+    <content>
+        <HBox fillHeight="true"
+              fx:id="list_of_lists">
 
-                  </HBox>
-               </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
-   </children>
-</AnchorPane>
+        </HBox>
+    </content>
+</ScrollPane>
