--- a/client/src/main/resources/client/scenes/DeleteCard.fxml
+++ b/client/src/main/resources/client/scenes/DeleteCard.fxml
@@ -2,19 +2,17 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.AddCardCtrl">
    <children>
-      <TextField layoutX="35.0" layoutY="97.0" prefHeight="95.0" prefWidth="492.0" />
-      <Label layoutX="35.0" layoutY="27.0" text="Title:">
+      <Label layoutX="56.0" layoutY="65.0" prefHeight="154.0" prefWidth="489.0" text="Are you sure you want to delete this card?" wrapText="true">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-    <Button layoutX="426.0" layoutY="320.0" mnemonicParsing="false" text="Create">
+    <Button layoutX="426.0" layoutY="320.0" mnemonicParsing="false" text="Delete">
          <font>
             <Font size="24.0" />
          </font>
