--- a/client/src/main/resources/client/scenes/DeleteCard.fxml
+++ b/client/src/main/resources/client/scenes/DeleteCard.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.AddCardCtrl">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.DeleteCardCtrl">
    <children>
       <Label layoutX="56.0" layoutY="65.0" prefHeight="154.0" prefWidth="489.0" text="Are you sure you want to delete this card?" wrapText="true">
          <font>
