Added Create CardList fully on client side, without server communication
Added a method to create a CardList in CardList class without server side code. The communication with server code has to be added. 

Added AddList to BoardOverviewCtrl Class, this will add a new list to the scene. The button will always stay to the right of the lists.

Added a button to ListView in BoardOverviewCtrl. This button uses addList method in Ctrl.

--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -3,17 +3,9 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.HBox?>
 
-<ScrollPane prefWidth="600"
-            prefHeight="400"
-            fitToHeight="true"
-            vbarPolicy="NEVER"
-            vmax="0.0"
-            xmlns="http://javafx.com/javafx/19"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.scenes.BoardOverviewCtrl">
+<ScrollPane fitToHeight="true" prefHeight="400" prefWidth="600" vbarPolicy="NEVER" vmax="0.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
     <content>
-        <HBox fillHeight="true"
-              fx:id="list_of_lists">
+        <HBox fx:id="list_of_lists" fillHeight="true">
 
         </HBox>
     </content>
