Added methods updateCard and deleteCard to ServerUtils. Updated controllers and fxml files for delete/edit card

--- a/client/src/main/resources/client/scenes/EditCard.fxml
+++ b/client/src/main/resources/client/scenes/EditCard.fxml
@@ -14,7 +14,7 @@
             <Font size="48.0" />
          </font>
       </Label>
-    <Button layoutX="426.0" layoutY="320.0" mnemonicParsing="false" text="Confirm">
+    <Button layoutX="426.0" layoutY="320.0" mnemonicParsing="false" onAction="#ok" text="Confirm">
          <font>
             <Font size="24.0" />
          </font>
