--- a/client/src/main/resources/client/scenes/DeleteCard.fxml
+++ b/client/src/main/resources/client/scenes/DeleteCard.fxml
@@ -12,7 +12,7 @@
             <Font size="48.0" />
          </font>
       </Label>
-    <Button layoutX="426.0" layoutY="320.0" mnemonicParsing="false" text="Delete">
+    <Button layoutX="426.0" layoutY="320.0" mnemonicParsing="false" onAction="#ok" text="Delete">
          <font>
             <Font size="24.0" />
          </font>
