--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -1,38 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<BorderPane maxHeight="1.7976931348623157E308"
-            xmlns="http://javafx.com/javafx/19"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.scenes.CardPopupCtrl">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane maxHeight="1.7976931348623157E308" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.CardPopupCtrl">
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
-                <Button mnemonicParsing="false" onAction="#close" text="Cancel"/>
-                <Button mnemonicParsing="false" onAction="#save" text="Save"/>
+                <Button mnemonicParsing="false" onAction="#close" text="Cancel" />
+                <Button mnemonicParsing="false" onAction="#save" text="Save" />
             </buttons>
             <BorderPane.margin>
-                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
             </BorderPane.margin>
         </ButtonBar>
     </bottom>
     <center>
-        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" hmax="0.0" maxHeight="1.7976931348623157E308"
-                    BorderPane.alignment="CENTER">
-            <VBox maxHeight="1.7976931348623157E308">
+        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" hmax="0.0" maxHeight="1.7976931348623157E308" BorderPane.alignment="CENTER">
+            <VBox maxHeight="1.7976931348623157E308" prefHeight="205.0" prefWidth="228.0" spacing="15.0">
                 <padding>
-                    <Insets bottom="8.0" left="8.0" right="20.0" top="8.0"/>
+                    <Insets bottom="8.0" left="8.0" right="20.0" top="8.0" />
                 </padding>
-                <TextField fx:id="cardTitle">
-                    <VBox.margin>
-                        <Insets/>
-                    </VBox.margin>
-                </TextField>
+            <HBox spacing="10.0">
+               <children>
+                  <Label text="Title">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                      <TextField fx:id="cardTitle" prefHeight="25.0" prefWidth="64.0" />
+               </children>
+            </HBox>
+            <ChoiceBox fx:id="list" prefWidth="150.0" />
                 <TextArea id="CardDescription" fx:id="cardDescription" prefHeight="100.0" prefWidth="200.0">
                     <VBox.margin>
-                        <Insets top="8.0"/>
+                        <Insets top="8.0" />
                     </VBox.margin>
                 </TextArea>
             </VBox>
