feat: Add UI for deleting a card
Add UI elements to CardPopup for deleting a card, no actual functionality yet.

- Add "Delete" button to CardPopup.fxml
- "Delete" button open a new stage to ask for confirmation
- "Cancel" button closes the window, "Delete" button currently doing the same

--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -15,6 +15,7 @@
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
+            <Button mnemonicParsing="false" onAction="#showDelete" text="Delete" textFill="#f60303" />
                 <Button mnemonicParsing="false" onAction="#close" text="Cancel" />
                 <Button mnemonicParsing="false" onAction="#save" text="Save" />
             </buttons>
