--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
-
-<VBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
-   <children>
-      <ScrollPane fitToHeight="true" prefHeight="400" prefWidth="600" vbarPolicy="NEVER" vmax="0.0">
-          <HBox fx:id="list_of_lists">
-    </HBox>
-      </ScrollPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <Button layoutX="449.0" layoutY="100.0" mnemonicParsing="false" onAction="#openNewTaskWindow" text="Add new task" />
-         </children>
-      </AnchorPane>
-   </children>
-</VBox>
+<AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
+    <children>
+        <ScrollPane fitToHeight="true" prefHeight="400" prefWidth="600.0" vbarPolicy="NEVER" vmax="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <HBox fx:id="list_of_lists">
+            </HBox>
+        </ScrollPane>
+        <ButtonBar maxHeight="-Infinity" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+            <buttons>
+                <Button mnemonicParsing="false" onAction="#openNewTaskWindow" text="Add new card" />
+            </buttons>
+        </ButtonBar>
+    </children>
+</AnchorPane>
