--- a/client/src/main/resources/client/scenes/AddCard.fxml
+++ b/client/src/main/resources/client/scenes/AddCard.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -24,5 +24,5 @@
           <Font size="24.0" />
         </font>
     </Button>
-   <ChoiceBox fx:id="list" layoutX="35.0" layoutY="236.0" prefWidth="150.0" />
+   <ComboBox fx:id="list" layoutX="35.0" layoutY="236.0" prefWidth="150.0" />
 </AnchorPane>
