--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -6,7 +6,8 @@
 <BorderPane maxHeight="1.7976931348623157E308"
             xmlns="http://javafx.com/javafx/19"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.scenes.CardPopupCtrl">
+            fx:controller="client.scenes.CardPopupCtrl"
+            fx:id="root">
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
