--- a/client/src/main/resources/client/scenes/AddCard.fxml
+++ b/client/src/main/resources/client/scenes/AddCard.fxml
@@ -19,7 +19,7 @@
             <Font size="24.0" />
         </font>
     </Button>
-    <Button fx:id="cancel" layoutX="300.0" layoutY="320.0" mnemonicParsing="false" onAction="#cancel" text="Cancel">
+    <Button fx:id="cancel" layoutX="300.0" layoutY="320.0" mnemonicParsing="false" onAction="#closeWindow" text="Cancel">
         <font>
           <Font size="24.0" />
         </font>
