--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
@@ -36,7 +36,7 @@
                     </VBox.margin>
                 </TextField>
             <Label text="List" />
-            <ChoiceBox fx:id="list" prefWidth="150.0" />
+            <ComboBox fx:id="list" prefWidth="150.0" />
             <Label text="Description" />
                 <TextArea id="CardDescription" fx:id="cardDescription" prefHeight="100.0" prefWidth="200.0">
                     <VBox.margin>
