refactor: change dependencies from MainCtrl to BoardOverviewCtrl where possible.
A lot of classes had MainCtrl as a dependency, eventhough the logic only concerned stuff related to the board. This patch changes it so that everything that just deals with boardlogic depends on BoardOverviewCtrl, not MainCtrl. The end goal is that the code is significantly more modular now.

--- a/client/src/main/resources/client/scenes/BoardOverview.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.fxml
@@ -10,7 +10,7 @@
    <children>
       <ToolBar prefHeight="40.0" prefWidth="200.0">
         <items>
-          <Button mnemonicParsing="false" onAction="#openNewTaskWindow" text="Add new Task" />
+          <Button mnemonicParsing="false" onAction="#showAddCard" text="Add new Task" />
         </items>
       </ToolBar>
       <ScrollPane fitToHeight="true" prefHeight="400" prefWidth="600" vbarPolicy="NEVER" vmax="0.0" VBox.vgrow="ALWAYS">
