Added new Board UI + cardlist fxml + talio logo
I have added and implemented the new board ui fxml. At this point adding cards is not possible because of the missing button.

TODO:
* Fix Logo
* Implement interactive features

--- a/client/src/main/resources/client/scenes/BoardOverview.old.fxml
+++ b/client/src/main/resources/client/scenes/BoardOverview.old.fxml
@@ -14,7 +14,7 @@
         </items>
       </ToolBar>
       <ScrollPane fitToHeight="true" prefHeight="400" prefWidth="600" vbarPolicy="NEVER" vmax="0.0" VBox.vgrow="ALWAYS">
-          <HBox fx:id="list_of_lists">
+          <HBox fx:id="listOfCardLists">
           </HBox>
       </ScrollPane>
    </children>
