--- a/client/src/main/resources/client/scenes/boardOverview.fxml
+++ b/client/src/main/resources/client/scenes/boardOverview.fxml
@@ -11,11 +11,11 @@
 
 <AnchorPane id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="720.0" minWidth="1200.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardOverviewCtrl">
    <children>
-      <BorderPane id="mainContentPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #555555;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane id="mainContentPane" prefHeight="720.0" prefWidth="1243.0" style="-fx-background-color: #555555;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
-            <ScrollPane id="listPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: none;" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+            <ScrollPane id="listPane" fitToHeight="true" fitToWidth="true" nodeOrientation="LEFT_TO_RIGHT" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: none;" vbarPolicy="NEVER">
                <content>
-                  <HBox fx:id="listOfCardLists" prefHeight="615.0" prefWidth="1167.0" style="-fx-background-color: #555555;" />
+                  <HBox fx:id="listOfCardLists" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="615.0" prefWidth="1167.0" style="-fx-background-color: #555555;" />
                </content>
                <BorderPane.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" />
