--- a/client/src/main/resources/client/scenes/RenameListPopup.fxml
+++ b/client/src/main/resources/client/scenes/RenameListPopup.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <BorderPane maxHeight="1.7976931348623157E308" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.scenes.RenameListPopupCtrl">
+            fx:controller="client.scenes.RenameListPopupCtrl"
+            fx:id="root">
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
