--- a/client/src/main/resources/client/scenes/boardOverview.fxml
+++ b/client/src/main/resources/client/scenes/boardOverview.fxml
@@ -29,7 +29,7 @@
                </BorderPane.margin>
                <children>
                   <Pane prefHeight="40.0" prefWidth="200.0" style="-fx-background-image: url('TALIO_logo.png');" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="5.0" />
-                  <Button id="newListButton" layoutX="1085.0" layoutY="13.0" mnemonicParsing="false" style="-fx-background-color: #22d15c;" text="New List" AnchorPane.rightAnchor="15.0">
+                  <Button id="newListButton" layoutX="1085.0" layoutY="13.0" mnemonicParsing="false" onAction="#addList" style="-fx-background-color: #22d15c;" text="New List" AnchorPane.rightAnchor="15.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
