--- a/client/src/main/resources/client/scenes/cardList - Copy.fxml
+++ b/client/src/main/resources/client/scenes/cardList - Copy.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -27,7 +28,11 @@
                   <Button id="editCardButton" fx:id="editButton" layoutX="174.0" layoutY="4.0" mnemonicParsing="false" style="-fx-background-color: none; -fx-border-color: #dadada; -fx-border-radius: 3;" text="E" textFill="#dadada" AnchorPane.bottomAnchor="3.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="3.0" />
                </children>
             </AnchorPane>
-            <ListView fx:id="cardListView" prefHeight="584.0" prefWidth="200.0" style="-fx-background-color: #333333;" />
+            <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="584.0" prefWidth="200.0" style="-fx-background-color: #333333; -fx-background-radius: 5 5 5 5;" vbarPolicy="ALWAYS">
+               <content>
+                  <ListView fx:id="cardListView" prefHeight="584.0" prefWidth="200.0" style="-fx-background-color: #333333;" />
+               </content>
+            </ScrollPane>
          </children>
       </VBox>
    </children>
