--- a/client/src/main/resources/client/scenes/AddCard.fxml
+++ b/client/src/main/resources/client/scenes/AddCard.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.AddCardCtrl">
-    <TextField fx:id="title" layoutX="35.0" layoutY="97.0" prefHeight="95.0" prefWidth="492.0" />
+    <TextField fx:id="title" alignment="TOP_LEFT" layoutX="35.0" layoutY="97.0" prefHeight="95.0" prefWidth="492.0">
+      <font>
+         <Font size="36.0" />
+      </font></TextField>
     <Label layoutX="35.0" layoutY="27.0" text="Title:">
         <font>
           <Font size="48.0" />
@@ -24,5 +26,4 @@
           <Font size="24.0" />
         </font>
     </Button>
-   <ComboBox fx:id="list" layoutX="35.0" layoutY="236.0" prefWidth="150.0" />
 </AnchorPane>
