--- a/client/src/main/resources/client/scenes/ConnectServer.fxml
+++ b/client/src/main/resources/client/scenes/ConnectServer.fxml
@@ -32,16 +32,17 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="62.0" prefWidth="600.0"
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="62.0"
+            prefWidth="600.0"
             xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="client.scenes.ConnectServerCtrl">
-      <Button layoutX="453.0" layoutY="19.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Connect" onAction="#connect"/>
-      <Label layoutX="14.0" layoutY="19.0" prefHeight="25.0" prefWidth="150.0" text="Server Address" />
-      <TextField layoutX="145.0" layoutY="19.0" prefHeight="25.0" prefWidth="282.0" fx:id="addressServer"/>
+    <Button layoutX="453.0" layoutY="19.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Connect"
+            onAction="#connect"/>
+    <Label layoutX="14.0" layoutY="19.0" prefHeight="25.0" prefWidth="150.0" text="Server Address"/>
+    <TextField layoutX="145.0" layoutY="19.0" prefHeight="25.0" prefWidth="282.0" fx:id="hostnameField"/>
 </AnchorPane>
