--- a/client/src/main/resources/client/scenes/ConnectServer.fxml
+++ b/client/src/main/resources/client/scenes/ConnectServer.fxml
@@ -37,9 +37,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="62.0"
-            prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity"
+            prefHeight="62.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/19"
             fx:controller="client.scenes.ConnectServerCtrl">
     <Button layoutX="453.0" layoutY="19.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Connect"
             onAction="#connect"/>
