--- a/client/src/main/resources/client/scenes/RenameListPopup.fxml
+++ b/client/src/main/resources/client/scenes/RenameListPopup.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane maxHeight="1.7976931348623157E308" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="1.7976931348623157E308" xmlns="http://javafx.com/javafx/19"
             fx:controller="client.scenes.RenameListPopupCtrl"
             fx:id="root">
     <bottom>
