--- a/client/src/main/resources/client/scenes/CreateBoard.fxml
+++ b/client/src/main/resources/client/scenes/CreateBoard.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+            fx:controller="client.scenes.CreateBoardCtrl"
+            prefHeight="400.0" prefWidth="600.0"
+            stylesheets="@../styles/ListOfBoards.css">
+    <top>
+        <HBox alignment="CENTER">
+            <Label styleClass="instruction">Create new board</Label>
+        </HBox>
+    </top>
+    <center>
+        <Label>Title:</Label>
+        <TextField fx:id="boardTitle"></TextField>
+    </center>
+    <bottom>
+        <HBox styleClass="buttons">
+            <Button onMouseClicked="#cancel">cancel</Button>
+            <Button onMouseClicked="#create">create board</Button>
+        </HBox>
+    </bottom>
+</BorderPane>
