--- a/client/src/main/resources/client/scenes/cardList.fxml
+++ b/client/src/main/resources/client/scenes/cardList.fxml
@@ -19,7 +19,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Text>
-                  <Button id="addCardButton" fx:id="addCardButton" layoutX="139.0" layoutY="-3.0" mnemonicParsing="false" style="-fx-background-color: none; -fx-border-color: #dadada; -fx-border-radius: 3;" text="+" textFill="#dadada" AnchorPane.bottomAnchor="3.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="3.0">
+                  <Button id="addCardButton" fx:id="addCardButton" layoutX="139.0" layoutY="-3.0" mnemonicParsing="false" onAction="#showAddCard" style="-fx-background-color: none; -fx-border-color: #dadada; -fx-border-radius: 3;" text="+" textFill="#dadada" AnchorPane.bottomAnchor="3.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="3.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
