feat: change location from where you can disconnect.
You can now disconnect from the list of boards. It's not possible to disconnect from the board overview anymore. Instead, you can go back to the list of boards.

--- a/client/src/main/resources/client/scenes/boardOverview.fxml
+++ b/client/src/main/resources/client/scenes/boardOverview.fxml
@@ -34,7 +34,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button id = "disconnectButton" layoutX="24.0" layoutY="13.0" mnemonicParsing="false" onAction="#disconnect" prefHeight="25.0" prefWidth="212.0" style="-fx-background-color: #22d15c;" text="Disconnect from Server">
+                  <Button id="disconnectButton" layoutX="24.0" layoutY="13.0" mnemonicParsing="false" onAction="#returnToBoardList" prefHeight="25.0" prefWidth="212.0" style="-fx-background-color: #22d15c;" text="Return to boardlist">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
