--- a/client/src/main/resources/client/scenes/ListOfBoards.fxml
+++ b/client/src/main/resources/client/scenes/ListOfBoards.fxml
@@ -11,7 +11,8 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="client.scenes.ListOfBoardsCtrl"
             prefHeight="400.0" prefWidth="600.0"
-            stylesheets="@../styles/ListOfBoards.css">
+            stylesheets="@../styles/ListOfBoards.css"
+            fx:id="root">
     <top>
         <HBox alignment="CENTER">
             <Label styleClass="instruction">Pick a board</Label>
