feat: make list of boards depend on client. Admin can see everything
I added a bunch of features of the backlog. Now, the boards a user sees is independent of other people. You can add a new by board with the add board button. The admin can see every board. You need a password to log in as admin. This password is printed in the log when you run the server. I added automated tests where I could but that's not a lot of places.

--- a/client/src/main/resources/client/scenes/CreateBoard.fxml
+++ b/client/src/main/resources/client/scenes/CreateBoard.fxml
@@ -7,15 +7,19 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="client.scenes.CreateBoardCtrl"
             prefHeight="400.0" prefWidth="600.0"
-            stylesheets="@../styles/ListOfBoards.css">
+            stylesheets="@../styles/GeneralStyle.css">
     <top>
         <HBox alignment="CENTER">
             <Label styleClass="instruction">Create new board</Label>
         </HBox>
     </top>
     <center>
-        <Label>Title:</Label>
-        <TextField fx:id="boardTitle"></TextField>
+        <VBox maxWidth="400">
+            <Region VBox.vgrow="ALWAYS" />
+            <Label>Title:</Label>
+            <TextField fx:id="boardTitle"/>
+            <Region VBox.vgrow="ALWAYS" />
+        </VBox>
     </center>
     <bottom>
         <HBox styleClass="buttons">
