--- a/client/src/main/resources/client/styles/GeneralStyle.css
+++ b/client/src/main/resources/client/styles/GeneralStyle.css
@@ -30,3 +30,12 @@
     -fx-background-color: #646363;
 }
 
+.instruction {
+    -fx-font-size: 4em;
+}
+
+.buttons {
+    -fx-padding: 1em 1em 1em 1em;
+    -fx-spacing: 5em;
+    -fx-alignment: center;
+}
